# collmbo

./: .gitignore  .mise.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Oidefile  README.md  SECURITY.md  dev-requirements.txt  full-requirements.txt  main.py  manifest.yml  mise.toml  pyproject.toml  requirements.txt  slim-requirements.txt  uv-requirements.txt  validate.sh
.github/: Oidefile  release.yml  renovate.json
.github/workflows/: auto-approve.yml  auto-label.yml  ci.yml  dco.yml  dependabot-auto-merge.yml  dependency-review.yml  flake8.yml  mypy.yml  oide.yml  publish.yml  pytype.yml  release.yml  renovate.yml  tests.yml  trivy.yml  validate.yml
app/: bolt_app.py  bolt_listeners.py  bolt_logic.py  bolt_middlewares.py  bolt_utils.py  env.py  exceptions.py  home_tab_logic.py  home_tab_service.py  i18n.py  litellm_image_ops.py  litellm_logic.py  litellm_ops.py  litellm_pdf_ops.py  litellm_service.py  markdown_conversion.py  mcp_logic.py  mcp_service.py  message_formatting.py  message_logic.py  message_utils.py  sensitive_info_redaction.py  slack_api_ops.py  slack_api_service.py  slack_constants.py  slack_file_download_ops.py  slack_file_service.py  slack_image_service.py  slack_ops.py  slack_pdf_service.py  slack_settings.py  slack_utils.py  slack_wip_message.py  tools_logic.py  tools_service.py  translation_logic.py  translation_service.py  vector_store_logic.py  vector_store_service.py
app/mcp/: __init__.py  agentcore_logic.py  agentcore_service.py  config_logic.py  config_service.py  no_auth_tools_service.py  oauth_control_service.py  oauth_tools_logic.py  oauth_tools_service.py  shared_tools_service.py  tools_logic.py
config/: mcp.yaml  mcp.yml
docs/configuration/: optional-settings.md
docs/features/: custom-callbacks.md  image-input.md  mcp-tools.md  pdf-input.md  prompt-caching.md  redaction.md  slack-friendly-formatting.md  tools-function-calling.md  vector-store.md
docs/setup/: creating-a-slack-app.md
examples/: callback_handler.py
oauth-callback-app/: README.md  lambda_handler.py
tests/: bolt_app_test.py  bolt_listeners_test.py  bolt_logic_test.py  bolt_middlewares_test.py  bolt_utils_test.py  callback_example.py  exceptions_test.py  home_tab_logic_test.py  i18n_test.py  litellm_image_ops_test.py  litellm_logic.py  litellm_logic_test.py  litellm_ops_test.py  logger_fn_example.py  main_test.py  markdown_conversion_test.py  message_formatting_test.py  message_logic_test.py  message_utils_test.py  slack_file_download_ops_test.py  slack_file_service_test.py  slack_image_service_test.py  slack_utils_test.py  slack_wip_message_test.py  test_mcp_logic.py  tools_example.py  tools_logic_test.py  translation_logic_test.py  vector_store_logic_test.py
tests/mcp/: agentcore_logic_test.py  config_logic_test.py  no_auth_logic_test.py  oauth_logic_test.py  tools_logic_test.py
